crates/service/tests/references/snapshots/features__references__elem__def_ident_idx.snap
---
source: crates/service/tests/references/elem.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 13
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 15
      },
      "end": {
        "line": 4,
        "character": 20
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 17
      },
      "end": {
        "line": 5,
        "character": 22
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 22
      },
      "end": {
        "line": 6,
        "character": 27
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 7,
        "character": 21
      },
      "end": {
        "line": 7,
        "character": 26
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 8,
        "character": 14
      },
      "end": {
        "line": 8,
        "character": 19
      }
    }
  }
]
